--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.0",
     "d3": "^7.8.0",
     "echarts": "^5.4.0",
+    "echarts-gl": "^2.0.9",
     "element-plus": "^2.4.0",
     "katex": "^0.16.0",
     "marked": "^17.0.1",
@@ -39,9 +40,11 @@
     "prettier": "^3.1.0",
     "sass": "^1.69.0",
     "typescript": "^5.3.0",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0",
-    "vue-tsc": "^1.8.0"
+    "vue-tsc": "^2.1.0"
   },
   "author": "DuncanYoung",
   "license": "MIT"
